--- a/data/project.json
+++ b/data/project.json
@@ -1,21 +1,27 @@
 {
-  "users": [],
   "publish": {
-    "publishPagesApp": false,
-    "publishSHA": "",
-    "publishISODate": ""
+    "publish_pages_app": true,
+    "publish_sha": "",
+    "publish_iso_date": ""
   },
+  "users": [],
   "project": {
-    "title": "Zora Neale Hurston’s Works Progress Administration Recordings",
-    "description": "",
-    "language": "",
-    "slug": "",
-    "authors": "",
-    "mediaPlayer": "universal",
-    "autoPopulateHomePage": "true",
-    "additionalUsers": [],
-    "": {},
-    "createdAt": "",
-    "updatedAt": ""
+    "github_org": "TawandaMulalu",
+    "is_private": false,
+    "title": "SoyinkaTheManDied",
+    "description": "Testing, testing..",
+    "language": "en",
+    "slug": "TheManDied",
+    "creator": "TawandaMulalu",
+    "authors": "Tawanda Mulalu",
+    "media_player": "avannotate",
+    "auto_populate_home_page": true,
+    "additional_users": [],
+    "tags": {
+      "tagGroups": [],
+      "tags": []
+    },
+    "created_at": "2025-04-23T12:16:21.351Z",
+    "updated_at": "2025-04-23T12:16:21.351Z"
   }
 }
