--- a/data/project.json
+++ b/data/project.json
@@ -4,7 +4,13 @@
     "publish_sha": "",
     "publish_iso_date": ""
   },
-  "users": [],
+  "users": [
+    {
+      "login_name": "TawandaMulalu",
+      "avatar_url": "https://avatars.githubusercontent.com/u/205994668?v=4",
+      "admin": true
+    }
+  ],
   "project": {
     "github_org": "TawandaMulalu",
     "is_private": false,
@@ -22,6 +28,26 @@
       "tags": []
     },
     "created_at": "2025-04-23T12:16:21.351Z",
-    "updated_at": "2025-04-23T12:16:21.351Z"
-  }
+    "updated_at": "2025-04-23T12:16:21.351Z",
+    "generate_pages_site": true
+  },
+  "annotations": {},
+  "events": {},
+  "pages": {
+    "a28154b5-0620-47d8-9f16-24f71f98d6aa": {
+      "content": [],
+      "created_at": "2025-04-23T12:16:21.353Z",
+      "created_by": "TawandaMulalu",
+      "title": "SoyinkaTheManDied",
+      "updated_at": "2025-04-23T12:16:21.353Z",
+      "updated_by": "TawandaMulalu",
+      "autogenerate": {
+        "enabled": true,
+        "type": "home"
+      }
+    }
+  },
+  "pageOrder": [
+    "a28154b5-0620-47d8-9f16-24f71f98d6aa"
+  ]
 }
